[gd_scene load_steps=10 format=3 uid="uid://dtqpnpyqbhoac"]

[ext_resource type="Script" path="res://Resources/Melee hits/c_4.gd" id="1_h1jae"]
[ext_resource type="Texture2D" uid="uid://s1nih8wpp6ir" path="res://Sprites/Weapons/C4.png" id="1_n1jic"]
[ext_resource type="Script" path="res://Resources/Bullets/SelfDestructParticles.gd" id="2_s84uo"]

[sub_resource type="Gradient" id="Gradient_ouk4h"]
colors = PackedColorArray(0.982884, 0, 0.220962, 1, 0.599951, 0.267772, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dy4l6"]
gradient = SubResource("Gradient_ouk4h")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_40crl"]
spread = 180.0
initial_velocity_min = 450.0
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_dy4l6")

[sub_resource type="Gradient" id="Gradient_4elgv"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4r8u6"]
gradient = SubResource("Gradient_4elgv")
width = 8
height = 8

[sub_resource type="CircleShape2D" id="CircleShape2D_kbvlw"]
radius = 89.2002

[node name="C4" type="Node2D"]
scale = Vector2(5, 5)
script = ExtResource("1_h1jae")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_n1jic")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 240
process_material = SubResource("ParticleProcessMaterial_40crl")
texture = SubResource("GradientTexture2D_4r8u6")
lifetime = 0.17
one_shot = true
explosiveness = 1.0
script = ExtResource("2_s84uo")

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_kbvlw")

[node name="DetonationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InvisTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="finished" from="GPUParticles2D" to="GPUParticles2D" method="_on_finished"]
[connection signal="timeout" from="DetonationTimer" to="." method="_on_detonation_timer_timeout"]
